# course_work_3

./: README.md  pyproject.toml
src/: functions.py  main.py  settings.py
tests/: test_functions.py
